plugins {
	id 'java'
	id 'java-library'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
	group = 'com.nect'
	version = '0.0.1-SNAPSHOT'

	java {
		sourceCompatibility = '21'
	}

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

		// Database drivers
		runtimeOnly 'org.postgresql:postgresql'
		runtimeOnly 'com.h2database:h2'

		implementation 'org.apache.commons:commons-lang3:3.17.0'

		// QueryDSL
		implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
		annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
		annotationProcessor "jakarta.annotation:jakarta.annotation-api"
		annotationProcessor "jakarta.persistence:jakarta.persistence-api"

		// Logstash
		implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}

	def querydslDir = "$buildDir/generated/querydsl"

	sourceSets {
		main.java.srcDirs += [querydslDir]
	}

	test {
		systemProperty 'test.mode', 'true'
		useJUnitPlatform()
	}
}

bootJar {
	enabled = false
}

jar {
	enabled = false
}
